Fit alignment issue with search box
Inner search box input fields included unnecessary margin and display
type that has been removed. Also, button size has been increased.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -607,25 +607,6 @@ fade-out
 
 //=================================================================================
 // search box styles
-#search-box 
-{
-    display: table;
-}
-
-#search-box  div
-{
-    display:table-row;
-}
-
-#search-box label
-{
-    display:table-cell;
-}
-
-#search-box input
-{
-    display:table-cell;
-}
 
 #search-box.mini
 {
@@ -722,12 +703,10 @@ fade-out
 
 #search-box.mini input
 {
-    position: relative;
-    top: 6px;
     height:0px;
-    margin-right:20px;
     font-size: 12px;
     background:$white;
+    margin-bottom:5px;
 }
 
 #search-box.mini input::-webkit-input-placeholder
@@ -778,8 +757,9 @@ fade-out
 
 #search-box.mini button
 {
-    width:75px;
-    font-size: 10px;
+    width:100%;
+    font-size: 12px;
+    margin:0;
 }
 
 //=================================================================================
